--- a/pom.xml
+++ b/pom.xml
@@ -263,5 +263,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Для парсинга json -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
     </dependencies>
 </project>
